# ball-sort-solver

./: .gitignore  app.py  cdk.context.json  cdk.json  pyproject.toml
src/: lyfoes_solver.py
tests/: test_solver.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  main.tsx  solver.test.ts  solver.ts  types.ts
web/src/components/: Box.css  Box.tsx  ColorPalette.css  ColorPalette.tsx  PuzzleBuilder.css  PuzzleBuilder.tsx  Tube.css  Tube.tsx
